--- a/build-untitled-Desktop-Debug/Makefile
+++ b/build-untitled-Desktop-Debug/Makefile
@@ -37,7 +37,7 @@ MOVE          = mv -f
 TAR           = tar -cf
 COMPRESS      = gzip -9f
 DISTNAME      = untitled1.0.0
-DISTDIR = /home/sebas/Escritorio/proyect\ 1.1/C-IDE/build-untitled-Desktop-Debug/.tmp/untitled1.0.0
+DISTDIR = /home/sebas/Escritorio/P1.1/C-IDE/build-untitled-Desktop-Debug/.tmp/untitled1.0.0
 LINK          = g++
 LFLAGS        = 
 LIBS          = $(SUBLIBS) /usr/lib/x86_64-linux-gnu/libQt5Widgets.so /usr/lib/x86_64-linux-gnu/libQt5Gui.so /usr/lib/x86_64-linux-gnu/libQt5Core.so -lGL -lpthread   
@@ -362,7 +362,7 @@ compiler_moc_header_clean:
 moc_ide.cpp: ../untitled/ide.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
-	/usr/lib/qt5/bin/moc $(DEFINES) --include '/home/sebas/Escritorio/proyect 1.1/C-IDE/build-untitled-Desktop-Debug/moc_predefs.h' -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I'/home/sebas/Escritorio/proyect 1.1/C-IDE/untitled' -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/10 -I/usr/include/x86_64-linux-gnu/c++/10 -I/usr/include/c++/10/backward -I/usr/lib/gcc/x86_64-linux-gnu/10/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../untitled/ide.h -o moc_ide.cpp
+	/usr/lib/qt5/bin/moc $(DEFINES) --include /home/sebas/Escritorio/P1.1/C-IDE/build-untitled-Desktop-Debug/moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/sebas/Escritorio/P1.1/C-IDE/untitled -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/10 -I/usr/include/x86_64-linux-gnu/c++/10 -I/usr/include/c++/10/backward -I/usr/lib/gcc/x86_64-linux-gnu/10/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../untitled/ide.h -o moc_ide.cpp
 
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
